2.5.0

CHANGES:

* Added width/height and deprecated figure creation arguments in ggplotly() (these should be specified in plotly_POST()).

FIXES:



2.4.0 -- 1 Feb 2015

* Pass plot configuration using ... to avoid conflicts in defaults/documentation
* Upgrade to plotly.js 1.5.1

2.3.4 -- 1 Feb 2015

Added a plotly_api_domain environment variable for configuring the API domain. Fixes #441

2.3.3 -- 27 Jan 2015

Bump axis number for each trace matching a panel number. fixes #318

2.3.2 -- 25 Jan 2015

More accurate list of data_array properties. Fixes #415

2.3.1 -- 25 Jan 2015

More accurate conversion of path width. Fixes #373.

2.3.0 -- 19 Jan 2015

Add sharing argument and deprecate world_readable. Fixes #332

2.2.4 -- 18 Jan 2015

Fix for error in embed_notebook(). See #409.

2.2.3 -- 18 Jan 2015

Fix for geom_vline(). See #402.

2.2.2 -- 18 Jan 2015

Fix bar orientation when we detect geom_bar() + coord_flip() in ggplotly(). Fixes #390.

2.2.1 -- 18 Jan 2015

Search for axis title in scene object. fixes #393.

2.2.0 -- 13 Jan 2015

The default for layout.hovermode is now 'closest' for non-line scatter traces

2.1.3 -- 12 Jan 2015

Fix size and alpha translation for geom_point. Fixes #386

2.1.2 -- 11 Jan 2015

Upgraded to plotlyjs 1.4.1. For a list of changes, see https://github.com/plotly/plotly.js/releases/tag/v1.4.1

2.1.1 -- 11 Jan 2015

Upgraded to plotlyjs 1.4. For a list of changes, see https://github.com/plotly/plotly.js/releases/tag/v1.4.0

2.1.0 -- 29 Dec 2015

plot_ly() now defaults to inherit=FALSE and plotly_build() is now idempotent. Fixes #280 and #277. See #368 for details.

2.0.19 -- 23 Dec 2015

Added as.widget() function for conveniency in converting plotly object to htmlwidget objects. See #294.

2.0.18 -- 22 Dec 2015

Fix #365

2.0.17 -- 22 Dec 2015

Fix #358

2.0.16 -- 18 Dec 2015

Require ggplot2 2.0.0 or higher. For details, see #269.

2.0.15 -- 13 Dec 2015

Fix #346

2.0.14 -- 13 Dec 2015

Fix #212

2.0.13 -- 12 Dec 2015

Fix #286
